[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI template"
authors = ["art3xa <artem.romanov.03@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.39"
pydantic-settings = "^2.8.1"
alembic = "^1.15.1"
asyncpg = "^0.30.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
python-multipart = "^0.0.20"
validators = "^0.34.0"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
mypy = "^1.15.0"
black = "^25.1.0"
pylint = "^3.3.6"
flake8 = "^7.1.2"
flake8-todo = "^0.7"
isort = "^6.0.1"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-randomly = "^3.16.0"
pytest-profiling = "^1.8.1"
pytest-timeout = "^2.3.1"
pytest-freezer = "^0.4.9"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"
faker = "^37.0.2"
bandit = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/art3xa/fastapi-template"
"Bug Tracker" = "https://github.com/art3xa/fastapi-template/issues"

[tool.black]
line-length = 120
target-version = [ "py311" ]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.ruff]
line-length = 120
exclude = [
  ".git", "__pycache__", ".mypy_cache", ".pytest_cache",
  "src/db/migrations/*",
]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B904",
    "B006",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["alembic", "__pycache__", "^config\\.py$", "^env\\.py$",]

[tool.isort]
py_version = 311
line_length = 120
skip_glob = ["src/db/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers -W error"
junit_family = "xunit2"
testpaths = ["src/tests"]
xfail_strict = true
filterwarnings = [
    "error",
    "error::DeprecationWarning"
]

